--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Teleopti.Ccc.Sdk.Host.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Teleopti.Ccc.Sdk.Host.csproj
@@ -263,4 +263,7 @@
     <PostBuildEvent>xcopy "$(ProjectDir)..\..\nhibernateAddons\Cache_Providers\*.dll" "$(TargetDir)" /y</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>if not exist "$(ProjectDir)web.config" copy "$(ProjectDir)..\..\BuildArtifacts\SDKWeb.config" "$(ProjectDir)web.config"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
