--- a/Teleopti.Ccc.Web.Broker/Web.config
+++ b/Teleopti.Ccc.Web.Broker/Web.config
@@ -47,7 +47,7 @@
       </layout>
     </appender>
     <root>
-      <level value="DEBUG" />
+      <level value="WARN" />
       <appender-ref ref="RollingLogFileAppender" />
     </root>
   </log4net>
