--- a/Teleopti.Ccc.WinCode/packages.config
+++ b/Teleopti.Ccc.WinCode/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="1.2.11" />
-  <package id="MbCache" version="1.0.0-CR1" />
+  <package id="MbCache" version="1.0.0" />
 </packages>
