--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/packages.config
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/packages.config
@@ -3,7 +3,7 @@
   <package id="Autofac" version="2.5.2.830" />
   <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="1.2.11" />
-  <package id="MbCache" version="1.0.0" />
+  <package id="MbCache" version="1.1-beta" />
   <package id="PowerThreading" version="20101026.0" />
   <package id="Rhino.PersistentHashTable" version="1.7.0.0" />
   <package id="Rhino.Queues" version="1.4.2.0" />
