--- a/Teleopti.Ccc.WinCodeTest/packages.config
+++ b/Teleopti.Ccc.WinCodeTest/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="1.2.11" />
-  <package id="MbCache" version="1.0.0" />
+  <package id="MbCache" version="1.1-beta" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6" />
   <package id="SharpTestsEx" version="1.1.1" />
