--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
@@ -117,6 +117,14 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.5.2.830" newVersion="2.5.2.830" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.4000" newVersion="3.3.0.4000" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
