--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -154,6 +154,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PreferencesSchedule.feature</DependentUpon>
     </Compile>
+    <Compile Include="Data\User\RequestableAbsenceType.cs" />
     <Compile Include="Routing.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
