--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus/Teleopti.Ccc.Sdk.ServiceBus.csproj
@@ -158,12 +158,15 @@
     <Compile Include="BusStartup.cs" />
     <Compile Include="DateOnlyPeriodSerializer.cs" />
     <Compile Include="DenormalizeBusBootStrapper.cs" />
+    <Compile Include="Denormalizer\DenormalizeGroupingMessageConsumer.cs" />
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionConsumer.cs" />
     <Compile Include="Denormalizer\InitialLoadScheduleProjectionConsumer.cs" />
     <Compile Include="Denormalizer\IScheduleChangedNotification.cs" />
+    <Compile Include="Denormalizer\IUpdateGroupingReadModelMessage.cs" />
     <Compile Include="Denormalizer\IUpdateScheduleProjectionReadModel.cs" />
     <Compile Include="Denormalizer\ProcessDenormalizeQueueConsumer.cs" />
     <Compile Include="Denormalizer\ScheduleChangedInDefaultScenarioNotification.cs" />
+    <Compile Include="Denormalizer\UpdateGroupingReadModelMessage.cs" />
     <Compile Include="Denormalizer\UpdateScheduleProjectionReadModel.cs" />
     <Compile Include="ExportForecastContainerInstaller.cs" />
     <Compile Include="ForecastContainerInstaller.cs" />
