--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -80,6 +80,7 @@
     <Compile Include="AbsenceRequestFromScheduleStepDefinitions.cs" />
     <Compile Include="Core\TestMethods.cs" />
     <Compile Include="Data\User\AgentWithoutAbsenceRequestsAccess.cs" />
+    <Compile Include="Data\User\AbsencePreferenceToday.cs" />
     <Compile Include="Data\User\ExistingAbsenceRequest.cs" />
     <Compile Include="Data\User\ExistingAvailability.cs" />
     <Compile Include="Data\User\ExistingLunchPreferenceToday.cs" />
